# anthropic_rust_sdk

./: .dockerignore  .gitignore  API_CURL_DOCS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MANAGED_AGENTS_PLAN.md  Makefile  README.md  TEST_RESULTS.md  api-diff.md  codacy.sh  crates.js  deny.toml  help.html  index.html  release-please-config.json  settings.html  src-files.js  test_real_api.rs
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml
check_my_usage/: all.html  fn.format_number.html  fn.main.html  index.html  sidebar-items.js
examples/: basic_message.rs  batch_processing.rs  claude_4_features.rs  streaming_message.rs  token_usage_tracker.rs
plans/: fix-crates-publish-target.md
search.index/: 0045d6794a.js  005acfa73f.js  0088f2ac5083.js  00efce64ae66.js  012f18a136.js  01510114fa.js  01574c5bb2.js  015c80e88c62.js  016917ae8803.js  018ea6fe05.js  018faf751a69.js  01a2788e7ffb.js  01bf9eea8f.js  01c2251ae60d.js  01d494d352da.js  025109539bf2.js  026c2396832d.js  0272400e9572.js  0272d03cb0.js  029ceb77a453.js  02bdcebb76.js  02d8d8c216dd.js  0311eb9394.js  034c76c4f386.js  03ba61fa03e3.js  03da9bd849.js  040eb1ec5e.js  042c03ac8ee2.js  042c9d69fc.js  048b6f157fc8.js  04962475441e.js  04aaa52662bb.js  04d548839ae0.js  04d556c540.js  04f679a429.js  05032c3670a7.js  050860f0dbc8.js  0531acc1d381.js  055123e4b2ec.js  05f8660702.js  (+922 more)
search.index/crateNames/: 2d782e3422.js  60d0b5f1de.js
search.index/desc/: 460f5ff9dcfd.js  6dc9d5e705.js  c2c42b2152.js  e766bd3c68c0.js  f9dcbb6e4934.js
search.index/entry/: 05a870d8c9.js  37957a719c19.js  40c86b5c6d.js  54610e2133.js  5fa88a00c3f2.js  b6d0756c16.js  c0a4aea21158.js  fb1f63179b.js
search.index/function/: 0d3261053f.js  3d012d177d7f.js  9006c7de1f.js  b8fc2d485870.js  c35d7ae69db9.js
search.index/generic_inverted_index/: 0ed7bb5aaa.js  491289d9d1fa.js  6f7084a5b9.js  a418d357f468.js  c6f8e24a7269.js
search.index/name/: 3493f252e8.js  60615bfde0.js  6ad458da8a7e.js  ccbe40ecdfc7.js  fe647f903335.js
search.index/normalizedName/: 10ec9f6041.js  6748ee6a25.js  8275b1e816f9.js  fadd930b6483.js  fb7ca01684f1.js
search.index/path/: 01d9658547.js  04d5883c80c7.js  0a8171c88692.js  3940eaa11b16.js  bd6157d58a.js
search.index/type/: 05c44f42d268.js  14961ac509c2.js  228b91b567.js  6f399561de.js  b2edeee4e9ca.js
src/: client.rs  config.rs  error.rs  lib.rs  types.rs
src/api/: completions.rs  files.rs  message_batches.rs  messages.rs  mod.rs  models.rs  skills.rs  utils.rs
src/builders/: batch_builder.rs  common.rs  message_builder.rs  mod.rs
src/check_my_usage/: check_my_usage.rs.html
src/models/: admin.rs  batch.rs  common.rs  completion.rs  file.rs  message.rs  mod.rs  model.rs  skill.rs
src/streaming/: event_parser.rs  message_stream.rs  mod.rs  session_event_stream.rs
src/test_api/: test_api.rs.html
src/threatflux/: client.rs.html  config.rs.html  error.rs.html  lib.rs.html  types.rs.html
src/threatflux_anthropic_sdk/: client.rs.html  config.rs.html  error.rs.html  lib.rs.html  types.rs.html
src/utils/: http.rs  mod.rs  rate_limit.rs  retry.rs
test_api/: all.html  fn.main.html  index.html
tests/: admin_parity_test.rs  e2e_test.rs  integration_suite.rs  real_api_suite.rs  reference_payload_compat_test.rs  skills_integration_test.rs
tests/common/: mod.rs
tests/integration/: admin_test.rs  batches_test.rs  e2e_test.rs  files_test.rs  managed_agents_more_test.rs  managed_agents_sub2_test.rs  managed_agents_sub_test.rs  managed_agents_test.rs  messages_test.rs  mod.rs  models_test.rs
tests/real_api/: mod.rs  real_messages_test.rs
tests/unit/: builders_test.rs  claude_4_test.rs  client_test.rs  config_test.rs  error_test.rs  managed_agents_requests_test.rs  managed_agents_test.rs  mod.rs  models_test.rs  session_stream_test.rs  (+3 more)
threatflux/: all.html  constant.API_VERSION.html  index.html  sidebar-items.js
threatflux_anthropic_sdk/: all.html  constant.API_VERSION.html  index.html
(+835 files in other folders)
