[package]
name = "threatflux"
version = "0.1.0"
authors = ["Wyatt Roersma <wyattroersma@gmail.com>", "Claude Code", "Codex"]
edition = "2021"
rust-version = "1.82.0"
description = "A Rust SDK for the Anthropic API"
license = "MIT"
repository = "https://github.com/wyattroersma/threatflux"
documentation = "https://docs.rs/threatflux"
readme = "README.md"
keywords = ["anthropic", "claude", "ai", "api", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
# HTTP client
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Environment variables
dotenv = "0.15"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# URL handling
url = "2.4"
# Base64 encoding/decoding
base64 = "0.21"
# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Stream utilities
futures = "0.3"
tokio-stream = "0.1"
# Retry logic
backoff = "0.4"
# Rate limiting
governor = "0.5"
nonzero_ext = "0.3"
# HTTP headers
http = "0.2"
# Mime types
mime = "0.3"
# Mime guessing
mime_guess = "2.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.0"
wiremock = "0.5"
pretty_assertions = "1.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "test-util"] }
futures-util = "0.3"
async-std = "1.12"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
real_api_tests = []

[[example]]
name = "basic_message"
path = "examples/basic_message.rs"

[[example]]
name = "streaming_message"
path = "examples/streaming_message.rs"

[[example]]
name = "batch_processing"
path = "examples/batch_processing.rs"