[package]
name = "threatflux"
version = "0.1.0"
authors = ["Wyatt Roersma <wyattroersma@gmail.com>", "Claude Code", "Codex"]
edition = "2021"
rust-version = "1.85.0"
description = "A Rust SDK for the Anthropic API"
license = "MIT"
repository = "https://github.com/wyattroersma/threatflux"
documentation = "https://docs.rs/threatflux"
readme = "README.md"
keywords = ["anthropic", "claude", "ai", "api", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
# HTTP client
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart"] }
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
# JSON serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"
# Environment variables
dotenv = "0.15.0"
# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
# URL handling
url = "2.5.8"
# Base64 encoding/decoding
base64 = "0.22.1"
# UUID generation
uuid = { version = "1.21.0", features = ["v4", "serde"] }
# Date/time handling
chrono = { version = "0.4.43", features = ["serde"] }
# Stream utilities
futures = "0.3.32"
tokio-stream = "0.1.18"
# Retry logic
backoff = "0.4.0"
# Rate limiting
governor = "0.10.4"
nonzero_ext = "0.3.0"
# HTTP headers
http = "1.4.0"
# Mime types
mime = "0.3.17"
# Mime guessing
mime_guess = "2.0.5"

[dev-dependencies]
tokio-test = "0.4.5"
mockito = "1.7.2"
tempfile = "3.25.0"
wiremock = "0.6.5"
pretty_assertions = "1.4.1"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full", "test-util"] }
futures-util = "0.3.32"
async-std = "1.13.2"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls"]
real_api_tests = []

[[example]]
name = "basic_message"
path = "examples/basic_message.rs"

[[example]]
name = "streaming_message"
path = "examples/streaming_message.rs"

[[example]]
name = "batch_processing"
path = "examples/batch_processing.rs"
